                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2013-08-12
 * Wing tenant sites now need a new configuration entry tenants/app_dir to tell Wing where to find the APP_DIR for tenants.  This allows the owner codebase to find it for doing database installs and library path handling.
 * Wing tenant sites have a limited SSO to use their owner's sites to log into tenant sites.

2013-08-08
 * Wing::Rest now has generate_relationship() and generate_all_relationships() so that
	you need not hand-create your relationship web services any longer. These are
	also enabled by default when you 'wing class --add=NewClass'

2013-06-18
 * Wing::Rest::Status now returns a tracer for checking cookie values.

2013-06-08
 * Better support for sites, user-controlled deletion, restoration and list all/owned.

2013-06-08
 * Site's trashed property is now available to admins.

2013-06-06
 * Many bug-fixes with tenant handling in wing db

2013-05-31
 * Added tenant() and tenant_db() methods to Wing.pm.

2013-05-30
 * Added the --do option to wing db.
 * Added the wing tenant plugin

2013-05-25
 * Added Wing Command, the new CLI for Wing.
 * Now requires App::Cmd.
 * Converted wing_db.pl to Wing Command.
 * Converted wing_add_user.pl to Wing Command.
 * wing user can now search and list users, and list only admins.
 * Add wing do to Wing Command, for firing off Wingman jobs.
 * Converted wing_add_class.pl and wing_template_class.pl to Wing Command.

2013-05-19
 * Added EmailAllAdmins Wingman plugin.
 * WARNING: By this point all Wing apps should have a block similar 
	to this added to their config files if they want to start
	using Wingman services.

    "wingman" : {
        "max_workers" : 2,
        "beanstalkd" : {
           "server" : "127.0.0.1",